# VRD-UQA

./: .gitignore  README.md  load.py  load_BDocs.py  load_DUDE.ipynb  load_DUDE.py  load_SlideVQA.py  pyproject.toml
corruption-scripts/: config.hpc.json  config.json
corruption-scripts/corruption/: data_loader.py  entity_identifier.py  in_context_modifier.py  layout_with_ocr.py  main.py  model_loader.py  pipeline.py
corruption-scripts/corruption/utils/: config_utils.py
