[project]
name = "vrd-uqa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets<4.0.0",
    "doclayout-yolo>=0.0.4",
    "gliner>=0.2.25",
    "huggingface-hub<=1.5.0",
    "nltk>=3.9.3",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pdf2image>=1.17.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "supervision>=0.27.0.post1",
    "tiktoken>=0.12.0",
    "torch<2.6",
    "torchvision<0.21",
    "tqdm>=4.67.3",
    "transformers>=4.51.3",
    "verovio>=6.0.1",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-gpu", marker = "sys_platform != 'darwin'" }
]
torchvision = [
    { index = "pytorch-gpu", marker = "sys_platform != 'darwin'" }
]

[tool.uv]
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]